WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134787
Closed web views should never create new web processes
https://bugs.webkit.org/show_bug.cgi?id=134787
Summary
Closed web views should never create new web processes
Anders Carlsson
Reported
2014-07-09 17:36:00 PDT
Closed web views should never create new web processes
Attachments
Patch
(6.55 KB, patch)
2014-07-09 17:38 PDT
,
Anders Carlsson
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2014-07-09 17:38:24 PDT
Created
attachment 234675
[details]
Patch
Anders Carlsson
Comment 2
2014-07-09 17:50:53 PDT
Committed
r170943
: <
http://trac.webkit.org/changeset/170943
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug